; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_slob.c_kmem_rcu_free.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_slob.c_kmem_rcu_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rcu_head = type { i32 }
%struct.slob_rcu = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rcu_head*)* @kmem_rcu_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kmem_rcu_free(%struct.rcu_head* %0) #0 {
  %2 = alloca %struct.rcu_head*, align 8
  %3 = alloca %struct.slob_rcu*, align 8
  %4 = alloca i8*, align 8
  store %struct.rcu_head* %0, %struct.rcu_head** %2, align 8
  %5 = load %struct.rcu_head*, %struct.rcu_head** %2, align 8
  %6 = bitcast %struct.rcu_head* %5 to %struct.slob_rcu*
  store %struct.slob_rcu* %6, %struct.slob_rcu** %3, align 8
  %7 = load %struct.slob_rcu*, %struct.slob_rcu** %3, align 8
  %8 = bitcast %struct.slob_rcu* %7 to i8*
  %9 = load %struct.slob_rcu*, %struct.slob_rcu** %3, align 8
  %10 = getelementptr inbounds %struct.slob_rcu, %struct.slob_rcu* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = getelementptr i8, i8* %11, i64 -8
  %13 = ptrtoint i8* %8 to i64
  %14 = ptrtoint i8* %12 to i64
  %15 = sub i64 %13, %14
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %4, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = load %struct.slob_rcu*, %struct.slob_rcu** %3, align 8
  %19 = getelementptr inbounds %struct.slob_rcu, %struct.slob_rcu* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @__kmem_cache_free(i8* %17, i8* %20)
  ret void
}

declare dso_local i32 @__kmem_cache_free(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
